@@ -246,34 +246,33 @@ int chtbl_search(const CHTBL *htab, int (*match)(const void *, const void*), con
   return 1;
 }
 
-#if defined(WIN32) || defined(__INTEL_COMPILER)
-int visual_sucks_and_does_not_support_local_functions_sortf(const void *d1, const void *d2)
+/** \brief insert into a sorted list a hash table element
+ */
+static int _h_list_ins_sorted(List *list, const CHTBL_Elmnt *data, int (*sort)(const void *, const void *))
 {
-  const char * key1 = ((CHTBL_Elmnt*)d1)->key;
-  const char * key2 = ((CHTBL_Elmnt*)d2)->key;
-  return (strcmp)(key1,key2);
+  ListElmt	*element;
+
+  /* head insertion */
+  if (list_size(list)==0)
+    return list_ins_next(list, NULL, data);
+
+  /* find last element matching sort function */
+  element = list->head;
+  if (sort(((CHTBL_Elmnt*)element->data)->key,data->key)>0) {
+    return list_ins_next(list, NULL, data);
+  }
+
+  while (element->next && element->next->data && sort(((CHTBL_Elmnt*)element->next->data)->key,data->key)<0) {
+    element = element->next;
+  }
+
+  return list_ins_next(list, element, data);
 }
-#endif /* WIN32 || __INTEL_COMPILER */
 
 List * chtbl_extract(const CHTBL *htab, int (*match)(const void *, const void *), const void *arg, int (*sort)(const void *, const void *))
 {
   unsigned int i;
   List * return_list;
-
-#if !defined(WIN32) && !defined(__INTEL_COMPILER)
-  /* yes, that's a bit lame .. we define an internal function, dependant on the upper
-   * level function's parameter, to compare the key (and not the CHTBL_Elmnt !).
-   */
-  int sortf(const void *d1, const void *d2)
-  {
-    const char * key1 = ((CHTBL_Elmnt*)d1)->key;
-    const char * key2 = ((CHTBL_Elmnt*)d2)->key;
-    return (*sort)(key1,key2);
-  }
-#else
-  int (*sortf)(const void *, const void *);
-  sortf = visual_sucks_and_does_not_support_local_functions_sortf;
-#endif
 
   return_list = malloc(sizeof(List));
   list_init(return_list,NULL);
@@ -281,11 +280,6 @@ List * chtbl_extract(const CHTBL *htab, int (*match)(const void *, const void *)
   if (sort) {
     CHTBL_Elmnt *tbl_elmnt;
     ListElmt * elmnt;
-    /* we sort on the key .. so we keep the complete struct on the first pass to
-     * realize the sorted insertion, and then we make a second pass to replace
-     * the struct by only the data
-     */
-    return_list->test = sortf;
 
     for (i=0; i<htab->containers; i++)
     {
@@ -296,13 +290,9 @@ List * chtbl_extract(const CHTBL *htab, int (*match)(const void *, const void *)
       for (elmnt=list_head(list); elmnt; elmnt=list_next(elmnt)) {
         tbl_elmnt = list_data(elmnt);
         if (!tbl_elmnt) continue;
-        if (match) {
-          if (!(*match)(tbl_elmnt->key, arg)) {
-            list_ins_next(return_list,list_tail(return_list),tbl_elmnt);
-          }
-        }
-        else {
-          list_ins_sorted(return_list,tbl_elmnt);
+        /* if we do not have a match function or if the element matches, insert ! */
+        if (!match || (!(*match)(tbl_elmnt->key, arg))) {
+          _h_list_ins_sorted(return_list,tbl_elmnt,sort);
         }
       } /* for (list) */
     } /* for (hash table) */
@@ -326,13 +316,10 @@ List * chtbl_extract(const CHTBL *htab, int (*match)(const void *, const void *)
       for (elmnt=list_head(list); elmnt; elmnt=list_next(elmnt)) {
         tbl_elmnt = list_data(elmnt);
         if (!tbl_elmnt) continue;
-        if (match) {
-          if (!(*match)(tbl_elmnt->key, arg)) {
-            list_ins_next(return_list,list_tail(return_list),tbl_elmnt->data);
-          }
-        }
-        else
+        /* if we do not have a match function or if the element matches, insert ! */
+        if (!match || (!(*match)(tbl_elmnt->key, arg))) {
           list_ins_next(return_list,list_tail(return_list),tbl_elmnt->data);
+        }
       } /* for (list) */
     } /* for (hash table) */
   }
